# NN_supervised_and_unsupervised

Practica3/: funciones.h  informe3.aux  informe3.out  informe3.tex  mem  mem.cpp  mem2  mem2.cpp  plot1.gn
Practica4/: funciones.h  informe4.aux  informe4.out  informe4.tex  logistico  logistico.cpp  xor  xor.cpp  xor1  xor1.cpp  xor2  xor2.cpp  xor3  xor3.cpp
Practica5/: LUdcmp.h  apren  apren1  apren1.cpp  apren2  apren2.cpp  autovalores  autovalores.cpp  comerciante  comerciante.cpp  complilacion  informe5.aux  informe5.out  informe5.tex  kohonen  kohonen.cpp  plot.gn
