

set terminal png
set output 'sigma01_2.png'

set grid
set xlabel 'Neuronas'
set ylabel 'Estado neuronal'
#set key bottom


#plot '0_0.1.dat' u 0:1 w lp t 'Condicion Inicial', '100_0.1.dat' u 0:1 w lp t '100', '500_0.1.dat' u 0:1 w lp t '500','1000_0.1.dat' u 0:1 w lp t '1000', '2000_0.1.dat' u 0:1 w lp t '2000','4000_0.1.dat' u 0:1 w lp t '4000','6000_0.1.dat' u 0:1 w lp t '6000','8000_0.1.dat' u 0:1 w lp t '8000'
plot '0_0.1.dat' u 0:2 w lp t 'Condicion Inicial', '100_0.1.dat' u 0:2 w lp t '100', '500_0.1.dat' u 0:2 w lp t '500','1000_0.1.dat' u 0:2 w lp t '1000','2000_0.1.dat' u 0:2 w lp t '2000','4000_0.1.dat' u 0:2 w lp t '4000','6000_0.1.dat' u 0:2 w lp t '6000','8000_0.1.dat' u 0:2 w lp t '8000'

#plot '0_0.5.dat' u 0:1 w lp t 'Condicion Inicial', '100_0.5.dat' u 0:1 w lp t '100', '500_0.5.dat' u 0:1 w lp t '500','1000_0.5.dat' u 0:1 w lp t '1000', '2000_0.5.dat' u 0:1 w lp t '2000','4000_0.5.dat' u 0:1 w lp t '4000','6000_0.5.dat' u 0:1 w lp t '6000','8000_0.5.dat' u 0:1 w lp t '8000'
#plot '0_0.5.dat' u 0:2 w lp t 'Condicion Inicial', '100_0.5.dat' u 0:2 w lp t '100', '500_0.5.dat' u 0:2 w lp t '500','1000_0.5.dat' u 0:2 w lp t '1000','2000_0.5.dat' u 0:2 w lp t '2000','4000_0.5.dat' u 0:2 w lp t '4000','6000_0.5.dat' u 0:2 w lp t '6000','8000_0.5.dat' u 0:2 w lp t '8000'

#plot '0_1.dat' u 0:2 w lp t 'Condicion Inicial', '100_1.dat' u 0:2 w lp t '100', '500_1.dat' u 0:2 w lp t '500','1000_1.dat' u 0:2 w lp t '1000','1500_1.dat' u 0:2 w lp t '1500','2000_1.dat' u 0:2 w lp t '2000','5000_1.dat' u 0:2 w lp t '5000','7500_1.dat' u 0:2 w lp t '7500'
#plot '0_1.dat' u 0:1 w lp t 'Condicion Inicial', '100_1.dat' u 0:1 w lp t '100', '500_1.dat' u 0:1 w lp t '500','1000_1.dat' u 0:1 w lp t '1000','1500_1.dat' u 0:1 w lp t '1500','2000_1.dat' u 0:1 w lp t '2000','5000_1.dat' u 0:1 w lp t '5000','7500_1.dat' u 0:1 w lp t '7500'

unset xlabel
unset ylabel
unset grid
#unset key
set terminal x11
